code/tui/snapshots/inline/session_manager/dashboard_open_help_chinese.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: output
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘

> /help














─ 帮 助  ─────────────────────────────────────────────────────────────────────────────────────────────

   快 捷 键     命 令     自 定 义 命 令
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ 仪 表 盘                                                                                        │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
  Enter/→  ·  打 开 仪 表 盘 中 选 中 的 会 话 ； 分 组 上 的 方 向 键 用 于 展 开 或 收 起
  g  ·  按 项 目 、 状 态 或 主 线 程 模 型 切 换 仪 表 盘 分 组 ； 重 启 后 保 留
  ←  ·  输 入 框 聚 焦 且 没 有 文 字 或 附 件 时 ， 打 开 仪 表 盘

  Enter/Esc/Ctrl+C 返 回   ·  Tab/Shift+Tab 切 换
