code/tui/snapshots/inline/session_manager/dashboard_preserves_hidden_draft.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
─ Dashboard ───────────────────────────────────────────────────────────────────── Group: Status  g ─

    Sessions                           Status           Updated   │ Session details
  Idle (1) -                                                      │
> ○ Snapshot session                   idle                       │ Snapshot session
                                                                  │ idle
  Archived (0)                                                    │
                                                                  │ Project
                                                                  │ No project
                                                                  │ Model: No model selected
                                                                  │
                                                                  │ Threads: 1
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │
                                                                  │

  Enter to open · Space to preview · Ctrl+X to archive · i to details · →/Esc to return
